# Elden-Ring_Improved-Selectors

./: .gitignore  Cargo.toml  README.md  build.ps1
OUTPUT/: ER improved selectors.7z  config.toml  er_IS_release.7z  release.7z
src/: DllMain.rs  lib.rs  settings.rs
src/implementation/: mod.rs
src/implementation/er/: core.rs  mod.rs  modlist.rs  utils.rs
src/implementation/er/modlist/action_reader/: action.rs  keybinds.rs  mod.rs  special_codes.rs
src/implementation/er/modlist/spell_selector/: internal.rs  mod.rs
src/implementation/er/modlist/spell_selector/internal/: no_miscast.rs
src/implementation/er/utils/: actions.rs  change.rs  constants.rs
src/implementation/er/utils/constants/: instances.rs  magic.rs  mod.rs  weapon.rs
src/settings/: default.rs
