[package]
name = "elden-ring_improved-selectors"
description = "Reworked item, spell and weapon selection systems for Elden Ring."
version = "3.2.0"
edition = "2024"
license = "MIT" #TBD
repository = "https://github.com/Zakaarus/Elden-Ring_Improved-Selectors"
keywords = ["elden ring"] #TBD
categories = ["elden ring"] #TBD

[dependencies]
eldenring = "0.10.0"
eldenring-util = "0.10.0"
fromsoftware-shared = "0.10.0"
windows = { version = "0.62.2", features = ["Win32_System_Threading", "Win32_System_LibraryLoader", "Win32_UI_Input_KeyboardAndMouse"] }
flux-rs = { git  = "https://github.com/flux-rs/flux.git" }
win-key-event = {git ="https://github.com/friesliam/win-key-event"}
serde = "1.0.228"
toml = "0.9.8"
anyhow = "1.0.100"
tokio = "1.47.1"
rdev = "0.5.3"

[lib]
crate-type = ["cdylib"]

#=== Development tool settings ===#

[package.metadata.flux]
enabled = true

[lints.clippy]
pedantic = {level = "deny", priority = -1}
restriction = {level = "deny", priority = -1}
nursery = {level = "deny", priority = -1}
cargo = {level = "deny", priority = -1}
unused_trait_names = "allow"
std_instead_of_core = "allow"
needless_return = "allow"
expect_used = "allow" #why would you remove the ability to separate result and option expect
panic = "allow"
multiple_unsafe_ops_per_block = "allow"
semicolon_outside_block = "allow"
print_stdout = "allow"
single_call_fn = "allow"
arbitrary_source_item_ordering = "allow" #this one's going to need looking at
question_mark_used = "allow"
pub_with_shorthand = "allow"
print_stderr = "allow"
pub_use = "allow"
mod_module_files = "allow"
self_named_module_files = "allow"
as_conversions = "allow"
multiple_inherent_impl = "allow" #i might just be extending a struct's functionality wrong?
default_numeric_fallback = "allow"
separated_literal_suffix = "allow"
integer_division_remainder_used = "allow" #bruh
blanket_clippy_restriction_lints = "allow" #lol I'll disable them as I go
multiple_crate_versions = "allow" #if I could figure out how patching works I would.
items_after_statements = "allow" #I kind of want to keep all items in one spot at the end.

[lints.rust]
unused_imports = "deny"